crates/nash-report/tests/can/snapshots/can__kinds__pair_of_const_and_const.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 195
description: "module Main exposing (..)\n\nimport Builtin exposing (..)\n\ntype alias p = pair int (list Data)\n"
---
(
    [],
    [
        (
            "p",
            Type,
            [],
        ),
    ],
)
