crates/nash-report/tests/can/snapshots/can__kinds__pair_requires_storable.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 205
description: "module Main exposing (..)\n\nimport Builtin exposing (..)\n\ntype option 'a = None | Some 'a\ntype alias p = pair (option int) Int\n"
info: diagnostic
---
nash::names::representation_mismatch

  × This position requires `Storable` in the lowercase name of alias `p`:
   ╭─[src/Main.nash:6:22]
 5 │ type option 'a = None | Some 'a
 6 │ type alias p = pair (option int) Int
   ·                      ──────────
   ╰────
  help: The type has `Term` representation, but `Storable` admits Big or Const types.
        Change the type or the representation requirement.
