crates/nash-report/tests/can/snapshots/can__kinds__pair_requires_storable_second_argument.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 212
description: "module Main exposing (..)\n\nimport Builtin exposing (..)\n\ntype option 'a = None | Some 'a\ntype alias p = pair Int (option int)\n"
info: diagnostic
---
nash::names::representation_mismatch

  × This position requires `Storable` in the lowercase name of alias `p`:
   ╭─[src/Main.nash:6:26]
 5 │ type option 'a = None | Some 'a
 6 │ type alias p = pair Int (option int)
   ·                          ──────────
   ╰────
  help: The type has `Term` representation, but `Storable` admits Big or Const types.
        Change the type or the representation requirement.
