crates/nash-report/tests/can/snapshots/can__kinds__parameter_and_application_have_separate_representation_predicates.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 637
description: "module Main exposing (..)\n\nimport Builtin exposing (..)\n\ntype wrap 'f ('a : Storable) = Wrap (('f 'a) : Storable)\n"
---
(
    [
        (
            "wrap",
            Arrow(
                Arrow(
                    Type,
                    Type,
                ),
                Arrow(
                    Type,
                    Type,
                ),
            ),
            [
                Apply {
                    head: Located {
                        region: Region {
                            start: Position {
                                line: 5,
                                column: 39,
                            },
                            end: Position {
                                line: 5,
                                column: 41,
                            },
                        },
                        value: Var(
                            "f",
                        ),
                    },
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 5,
                                    column: 42,
                                },
                                end: Position {
                                    line: 5,
                                    column: 44,
                                },
                            },
                            value: Var(
                                "a",
                            ),
                        },
                    ],
                },
                Implied {
                    trait_: QualifiedName {
                        home: ModuleName {
                            package: Some(
                                PackageName {
                                    author: "nash",
                                    project: "core",
                                },
                            ),
                            name: "Builtin",
                        },
                        name: "Storable",
                    },
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 5,
                                    column: 15,
                                },
                                end: Position {
                                    line: 5,
                                    column: 17,
                                },
                            },
                            value: Var(
                                "a",
                            ),
                        },
                    ],
                },
                Trait {
                    trait_: QualifiedName {
                        home: ModuleName {
                            package: Some(
                                PackageName {
                                    author: "nash",
                                    project: "core",
                                },
                            ),
                            name: "Builtin",
                        },
                        name: "Storable",
                    },
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 5,
                                    column: 39,
                                },
                                end: Position {
                                    line: 5,
                                    column: 44,
                                },
                            },
                            value: App {
                                head: Located {
                                    region: Region {
                                        start: Position {
                                            line: 5,
                                            column: 39,
                                        },
                                        end: Position {
                                            line: 5,
                                            column: 41,
                                        },
                                    },
                                    value: Var(
                                        "f",
                                    ),
                                },
                                args: [
                                    Located {
                                        region: Region {
                                            start: Position {
                                                line: 5,
                                                column: 42,
                                            },
                                            end: Position {
                                                line: 5,
                                                column: 44,
                                            },
                                        },
                                        value: Var(
                                            "a",
                                        ),
                                    },
                                ],
                            },
                        },
                    ],
                },
            ],
        ),
    ],
    [],
)
