crates/nash-report/tests/can/snapshots/can__kinds__partial_constructor_is_not_a_value_type.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 255
description: "module Main exposing (..)\n\nimport Builtin exposing (..)\n\nvalue : list\nvalue = ()\nother : pair int\nother = ()\n"
info: diagnostic
---
nash::names::kind_mismatch

  × Kind mismatch in the annotation for `value`.
   ╭─[src/Main.nash:5:9]
 4 │ 
 5 │ value : list
   ·         ────
 6 │ value = ()
   ╰────
  help: Expected kind `Type`, found `Type -> Type`.

nash::names::kind_mismatch

  × Kind mismatch in the annotation for `other`.
   ╭─[src/Main.nash:7:9]
 6 │ value = ()
 7 │ other : pair int
   ·         ────────
 8 │ other = ()
   ╰────
  help: Expected kind `Type`, found `Type -> Type`.
