crates/nash-report/tests/can/snapshots/can__kinds__partial_constructor_rejects_a_higher_kinded_argument_mismatch.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 865
description: "module Main exposing (..)\n\nimport Builtin exposing (..)\n\ntype option 'a = None | Some 'a\ntype tag 'a = Tag\ntype s 'f 'g 'a = S ('g ('f 'a))\ntype w = W (tag (s s option))\n"
info: diagnostic
---
nash::names::kind_mismatch

  × Kind mismatch in field 1 of little constructor `W` in `w`.
   ╭─[src/Main.nash:8:20]
 7 │ type s 'f 'g 'a = S ('g ('f 'a))
 8 │ type w = W (tag (s s option))
   ·                    ─
   ╰────
  help: Expected kind `Type`, found `Type -> Type`.
