crates/nash-report/tests/can/snapshots/can__kinds__partial_pair_application_checks_its_supplied_context.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 857
description: "module Main exposing (..)\n\nimport Builtin exposing (..)\n\ntype option 'a = None | Some 'a\ntype use 'f = Use ('f int)\ntype w = W (use (pair (option int)))\n"
info: diagnostic
---
nash::names::representation_mismatch

  × This position requires `Storable` in field 1 of little constructor `W` in `w`:
   ╭─[src/Main.nash:7:24]
 6 │ type use 'f = Use ('f int)
 7 │ type w = W (use (pair (option int)))
   ·                        ──────────
   ╰────
  help: The type has `Term` representation, but `Storable` admits Big or Const types.
        Change the type or the representation requirement.
