crates/nash-report/tests/can/snapshots/can__kinds__phantom_parameter.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 117
description: "module Main exposing (..)\n\nimport Builtin exposing (..)\n\ntype Tag 'a = Tag Int\n"
---
(
    [
        (
            "Tag",
            Arrow(
                Type,
                Type,
            ),
            [],
        ),
    ],
    [],
)
